--- a/style.css
+++ b/style.css
@@ -62,6 +62,15 @@ body {
   color: #333;
   line-height: 24px;
   text-align: center; }
+  @media (min-width: 600px) {
+    body {
+      border: 1px solid green; } }
+  @media (min-width: 768px) {
+    body {
+      border: 1px solid yellow; } }
+  @media (min-width: 1024px) {
+    body {
+      border: 1px solid red; } }
 
 #wrapper {
   position: relative; }
@@ -74,7 +83,7 @@ body {
   position: relative;
   padding: 50px 0px;
   width: 100%; }
-  @media (min-width: 600px) {
+  @media (min-width: 768px) {
     #container {
       background: #11255a url('images/mountain-bg.png') center center no-repeat;
       background-size: cover;
@@ -103,7 +112,7 @@ body {
     top: 0;
     left: 0;
     display: none; }
-    @media (min-width: 600px) {
+    @media (min-width: 768px) {
       #container:before {
         display: inline-block; } }
 
@@ -123,6 +132,9 @@ a {
   max-width: 1180px;
   margin: 0 auto;
   position: relative; }
+  @media (min-width: 768px) {
+    #content {
+      padding: 0 20px; } }
 
 #ft-utility {
   height: 40px;
@@ -235,7 +247,8 @@ a {
   padding: 40px;
   position: relative;
   overflow: hidden;
-  padding-bottom: 16.31579%; }
+  padding-bottom: 16.31579%;
+  max-height: 235px; }
 
 .mountain-range {
   position: absolute;
@@ -299,6 +312,8 @@ a {
   padding: 40px 0;
   color: #FFF;
   position: relative; }
+  #footer #copyright {
+    padding: 0 20px; }
   #footer:after {
     content: '';
     background: transparent;
@@ -330,6 +345,10 @@ a {
     margin-bottom: 10px;
     font-size: 18px;
     font-family: 'Raleway', sans-serif; }
+    @media (min-width: 768px) {
+      #footer h2 {
+        width: auto;
+        margin: 0 5px; } }
   #footer a, #footer span {
     color: #FFF;
     display: inline-block;
@@ -338,6 +357,15 @@ a {
     padding: 0px 0;
     text-decoration: none;
     font-size: 16px; }
+    @media (min-width: 600px) {
+      #footer a, #footer span {
+        width: auto;
+        margin: 0 5px; } }
+  #footer a {
+    cursor: pointer;
+    transition: .3s all; }
+    #footer a:hover {
+      opacity: .8; }
 
 .button {
   border: 2px solid white;
@@ -371,11 +399,13 @@ a {
   padding: 40px 20px 0;
   background: #11255a url('images/mountain-bg.png') center center no-repeat;
   background-size: cover;
-  position: relative; }
-  @media (min-width: 600px) {
+  position: relative;
+  overflow: auto; }
+  @media (min-width: 768px) {
     .home .mission {
       background: transparent;
-      border-bottom: 1px solid #FFF; } }
+      border-bottom: 1px solid #FFF;
+      padding: 40px 0px 0; } }
   .home .mission:after {
     background: #576487;
     /* Old browsers */
@@ -400,12 +430,24 @@ a {
     top: 0;
     left: 0;
     display: inline-block; }
-    @media (min-width: 600px) {
+    @media (min-width: 768px) {
       .home .mission:after {
         display: none; } }
 .home .mission-statement {
   position: relative;
-  z-index: 1; }
+  z-index: 1;
+  display: inline-block;
+  width: 100%; }
+  @media (min-width: 768px) {
+    .home .mission-statement {
+      width: 100%;
+      float: left;
+      padding-right: 50%; } }
+  @media (min-width: 1024px) {
+    .home .mission-statement {
+      width: 100%;
+      float: left;
+      padding-right: 40%; } }
   .home .mission-statement p {
     font-size: 18px;
     font-family: 'Lato', sans-serif;
@@ -413,12 +455,32 @@ a {
     line-height: 22px;
     text-align: center;
     text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25); }
-    @media (min-width: 600px) {
+    @media (min-width: 768px) {
       .home .mission-statement p {
         font-size: 22px;
         line-height: 28px; } }
 .home .call-to-action {
-  text-align: center; }
+  text-align: center;
+  display: inline-block;
+  width: 100%;
+  position: relative;
+  text-align: center;
+  z-index: 2; }
+  @media (min-width: 768px) {
+    .home .call-to-action {
+      width: 50%;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%) translateX(-50%);
+      left: 75%; } }
+  @media (min-width: 1024px) {
+    .home .call-to-action {
+      width: 40%;
+      left: 80%; } }
+  @media (min-width: 768px) {
+    .home .call-to-action .button {
+      margin-bottom: 0;
+      width: auto; } }
 .home .recruit {
   color: #FFF;
   overflow: auto; }
@@ -426,7 +488,7 @@ a {
     width: 100%;
     display: inline-block;
     text-align: center; }
-    @media (min-width: 600px) {
+    @media (min-width: 768px) {
       .home .recruit > div {
         width: 50%;
         float: left; } }
@@ -439,15 +501,20 @@ a {
 .home .recruit-1 {
   background-color: #db7c00;
   padding: 40px 20px 0; }
-  @media (min-width: 600px) {
+  @media (min-width: 768px) {
     .home .recruit-1 {
       background: transparent; } }
-  .home .recruit-1 .button {
-    width: 40%; }
+  @media (min-width: 600px) {
+    .home .recruit-1 .button {
+      width: 40%;
+      margin: 0 5%;
+      float: left;
+      clear: initial;
+      margin-bottom: 30px; } }
 .home .recruit-2 {
   background-color: #FFF;
   color: #333; }
-  @media (min-width: 600px) {
+  @media (min-width: 768px) {
     .home .recruit-2 {
       background: transparent;
       padding: 40px 20px; } }
@@ -467,7 +534,22 @@ a {
     .home .quadrant {
       width: 50%;
       float: left;
-      background: rgba(255, 255, 255, 0.5); } }
+      background: rgba(0, 0, 0, 0.025);
+      /* Old browsers */
+      background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.025) 0%, transparent 100%);
+      /* FF3.6+ */
+      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0.025)), color-stop(100%, transparent));
+      /* Chrome,Safari4+ */
+      background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.025) 0%, transparent 100%);
+      /* Chrome10+,Safari5.1+ */
+      background: -o-linear-gradient(top, rgba(0, 0, 0, 0.025) 0%, transparent 100%);
+      /* Opera 11.10+ */
+      background: -ms-linear-gradient(top, rgba(0, 0, 0, 0.025) 0%, transparent 100%);
+      /* IE10+ */
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.025) 0%, transparent 100%);
+      /* W3C */
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 );
+      /* IE6-9 */ } }
   .home .quadrant:nth-child(even):before {
     -webkit-transform: rotate(-3deg);
     transform: rotate(-3deg);
@@ -503,25 +585,28 @@ a {
     position: absolute;
     content: '';
     pointer-events: none; }
-  @media (min-width: 600px) {
+    @media (min-width: 600px) {
+      .home .quadrant:before {
+        display: none; } }
+  @media (min-width: 768px) {
     .home .quadrant:hover {
       background-color: #db7c00; } }
-  @media (min-width: 600px) {
+  @media (min-width: 768px) {
     .home .quadrant.marketing {
       border-top-left-radius: 100%;
       border-right: .5px solid rgba(0, 0, 0, 0.1);
       border-bottom: .5px solid rgba(0, 0, 0, 0.1); } }
-  @media (min-width: 600px) {
+  @media (min-width: 768px) {
     .home .quadrant.meaning {
       border-top-right-radius: 100%;
       border-left: .5px solid rgba(0, 0, 0, 0.1);
       border-bottom: .5px solid rgba(0, 0, 0, 0.1); } }
-  @media (min-width: 600px) {
+  @media (min-width: 768px) {
     .home .quadrant.mental-health {
       border-bottom-left-radius: 100%;
       border-right: .5px solid rgba(0, 0, 0, 0.1);
       border-top: .5px solid rgba(0, 0, 0, 0.1); } }
-  @media (min-width: 600px) {
+  @media (min-width: 768px) {
     .home .quadrant.money {
       border-bottom-right-radius: 100%;
       border-left: .5px solid rgba(0, 0, 0, 0.1);
