--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,5 @@
 /*
-Theme Name: Annapolis Drone Operations
+Theme Name: FiveTwelve 2016
 Theme URI: http://wordpress.org/themes/blankslate
 Author: TidyThemes
 Author URI: http://tidythemes.com/
@@ -42,7 +42,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 
 @mixin compartment {
 	width: 100%;
-	max-width: 1000px;
+	max-width: 1180px;
 	margin: 0 auto;
 }
 
@@ -147,31 +147,13 @@ h2 {
 	overflow: auto;
 }
 
-#sidebar {
-	display: inline-block;
-	width: 100%;
-	border-top: 1px solid #eaeaea;
-	text-align: left;
-	padding: 30px 0;
-
-	@include breakpoint(tablet) {
-		width: 25%;
-		float: right;
-		border: 0;
-		padding: 45px 0;
-	}
-
-	@include breakpoint(desktop) {
-		padding: 55px 0;
-	} 
-}
-
 p {
 	margin-bottom: 30px;
 }
 
 a {
 	transition: .3s all;
+	text-decoration: none;
 	&:hover {
 		opacity: .8;
 	}
@@ -193,6 +175,8 @@ a {
 	transition: .3s all;
 	font-weight: 500;
 	letter-spacing: 1px;
+	cursor: pointer;
+	max-width: 225px;
 
 	&:hover {
 		background: $color-white;
@@ -209,6 +193,97 @@ h3 {
 
 #content {
 	width: 100%;
+}
+
+.main-page-section {
+
+	h1 {
+		font-size: 45px;
+		color: $darkblue;
+		font-weight: medium;
+		margin-bottom: 45px;
+		font-family: $type-header;
+		line-height: 40px;
+	}
+
+	h2 {
+		font-size: 30px;
+		color: $orange;
+		margin-bottom: 25px;
+		font-family: $type-header;
+		font-weight: 500;
+		line-height: 34px;
+
+	}
+
+	h3 {
+		text-transform: uppercase;
+		color: $darkblue;
+		font-size: 18px;
+		margin-bottom: 15px;
+		font-family: $type-header;
+		font-weight: 600;
+		line-height: 26px;
+	}
+
+	h4 {
+		font-weight: 700;
+		margin-bottom: 15px;
+		color: $charcoal;
+		font-family: $type-header;
+		font-size: 16px;
+		line-height: 18px;
+	}
+
+	a {
+		color: $orange;
+		font-weight: 500;
+	}
+
+	.button {
+		border-color: $orange;
+
+		&:hover {
+			color: $color-white;
+			background: $orange;
+		}
+	}
+
+	ul {
+	    list-style-type: disc;
+	    padding-left: 30px;
+	    margin: 0;
+	    margin-bottom: 30px;
+	}
+
+	li {
+		margin-bottom: 8px;
+	}
+
+	#sidebar {
+		display: inline-block;
+		width: 100%;
+		border-top: 1px solid #eaeaea;
+		text-align: left;
+		padding: 30px 0;
+
+		@include breakpoint(tablet) {
+			width: 25%;
+			float: right;
+			border: 0;
+			padding: 45px 0;
+		}
+
+		@include breakpoint(desktop) {
+			padding: 105px 0;
+		} 
+	}
+
+	.xoxo {
+		list-style-type: none;
+		padding: 0;
+		margin: 0;
+	}
 }
 
 // OFF CANVAS
@@ -260,11 +335,12 @@ h3 {
 	.mobile-utility {
 
 		.utility-link {
-			display: block;
+			display: inline-block;
 			margin-bottom: 5px;
 			text-transform: uppercase;
 			color: rgba($color-white, .75);
 			font-size: 12px;
+			width: 100%;
 		}
 	}
 
@@ -318,38 +394,42 @@ right: 20%;
 height: 2px;
 background: $color-white;
 transform: translateY(-50%);
-	transition: background 0s 0.3s;
+-ms-transform: translateY(-50%);
+-webkit-transform: translateY(-50%);
+transition: background 0s 0.3s;
 
-body.mobile-menu-active & {
-	background: none;
-}
+	body.mobile-menu-active & {
+		background: none;
+	}
 }
 
 #menu-toggle span::before,
 #menu-toggle span::after {
-position: absolute;
-display: block;
-left: 0;
-width: 100%;
-height: 2px;
-background: $color-white;
-content: "";
-transition-duration: 0.3s, 0.3s;
+	position: absolute;
+	display: block;
+	left: 0;
+	width: 100%;
+	height: 2px;
+	background: $color-white;
+	content: "";
+	transition-duration: 0.3s, 0.3s;
 	transition-delay: 0.3s, 0s;
 
-body.mobile-menu-active & {
-		transition-delay: 0s, 0.3s;
-}
+	body.mobile-menu-active & {
+			transition-delay: 0s, 0.3s;
+	}
 }
 
 #menu-toggle span::before {
 	top: -8px;
-	  	transition-property: top, transform;
+	transition-property: top, transform;
 
 	body.mobile-menu-active & {
-	top: 0;
-	transform: rotate(45deg);
-}
+		top: 0;
+		transform: rotate(45deg);
+		-ms-transform: rotate(45deg);
+		-webkit-transform: rotate(45deg);
+	}
 }
 
 	#menu-toggle span::after {
@@ -359,6 +439,8 @@ body.mobile-menu-active & {
 	body.mobile-menu-active & {
 		bottom: 0;
 		transform: rotate(-45deg);
+		-ms-transform: rotate(-45deg);
+		-webkit-transform: rotate(-45deg);
 	}
 }
 
@@ -447,6 +529,8 @@ body.mobile-menu-active & {
 		display: inline-block;
 		float: right;
 		vertical-align: top;
+		//height: 16.24%;
+							max-height: 70px;
 
 		@include breakpoint(desktop) {
 			position: absolute;
@@ -722,7 +806,8 @@ padding:0;
 		overflow: auto;
 
 		@include breakpoint(landscape) {
-			border-bottom: 1px solid $color-white; ;
+			border-bottom: 1px solid $color-white;
+			@include compartment;
 		}
 	}
 
@@ -782,6 +867,8 @@ padding:0;
 			top: initial;
 			left: initial;
 			transform: initial;
+			-ms-transform: initial;
+			-webkit-transform: initial;
 		}
 
 		.button {
@@ -796,7 +883,7 @@ padding:0;
 
 	.recruit {
 		color: $color-white;
-		overflow: auto;
+		overflow: hidden;
 
 		@include breakpoint(desktop) {
 			padding: 55px 20px;
@@ -825,7 +912,7 @@ padding:0;
 
 		@include breakpoint(desktop) {
 			position: relative;
-			overflow: auto;
+			overflow: hidden;
 
 		}
 	}
@@ -849,6 +936,8 @@ padding:0;
 			top: 40%;
 			left: 0;
 			transform: translateY(-50%);
+			-ms-transform: translateY(-50%);
+			-webkit-transform: translateY(-50%);
 			padding: 55px 20px;
 		}
 
@@ -926,6 +1015,11 @@ padding:0;
 	.m-intro {
 		padding: 30px 20px 60px;
 
+		a {
+			color: $orange;
+
+		}
+
 		@include breakpoint(tablet) {
 			padding: 30px 20px;
 		}
@@ -947,6 +1041,8 @@ padding:0;
 			top: 50%;
 			left: 50%;
 			transform: translateX(-50%) translateY(-50%);
+			-ms-transform: translateX(-50%) translateY(-50%);
+			-webkit-transform: translateX(-50%) translateY(-50%);
 			border: 1px solid rgba($color-black, .1);
 		}
 
@@ -965,6 +1061,7 @@ padding:0;
 		transition: .3s all;
 		position: relative;
 		padding: 30px 20px 60px;
+		min-height: 275px;
 
 		@include breakpoint(tablet) {
 			width: 50%;
@@ -984,17 +1081,17 @@ padding:0;
 
 		.quadrant-inner {
 
-						@include breakpoint(desktop) {
+			@include breakpoint(desktop) {
 				width: 75%;
-
 			}
 		}
 
 		&:nth-child(even) {
 
 			&:before {
-				-webkit-transform: rotate(-3deg);
 				transform: rotate(-3deg);
+				-ms-transform: rotate(-3deg);
+				-webkit-transform: rotate(-3deg);
 				-webkit-transform-origin: 3% 0;
 				transform-origin: 3% 0;
 			}
@@ -1003,8 +1100,9 @@ padding:0;
 		&:nth-child(odd) {
 
 			&:before {
-				-webkit-transform: rotate(3deg);
 				transform: rotate(3deg);
+				-ms-transform: rotate(3deg);
+				-webkit-transform: rotate(3deg);
 				-webkit-transform-origin: 97% 0;
 				transform-origin: 97% 0;
 			}	
@@ -1072,6 +1170,8 @@ padding:0;
 					top: 55%;
 					left: 55%;
 					transform: translateY(-50%) translateX(-50%);
+					-ms-transform: translateY(-50%) translateX(-50%);
+					-webkit-transform: translateY(-50%) translateX(-50%);
 				}
 			}
 		}
@@ -1097,6 +1197,8 @@ padding:0;
 					top: 55%;
 					left: 45%;
 					transform: translateY(-50%) translateX(-50%);
+					-ms-transform: translateY(-50%) translateX(-50%);
+					-webkit-transform: translateY(-50%) translateX(-50%);
 				}
 			}
 		}
@@ -1122,6 +1224,8 @@ padding:0;
 					top: 40%;
 					left: 50%;
 					transform: translateY(-50%) translateX(-50%);
+					-ms-transform: translateY(-50%) translateX(-50%);
+					-webkit-transform: translateY(-50%) translateX(-50%);
 				}
 			}
 		}
@@ -1147,6 +1251,8 @@ padding:0;
 					top: 40%;
 					left: 50%;
 					transform: translateY(-50%) translateX(-50%);
+					-ms-transform: translateY(-50%) translateX(-50%);
+					-webkit-transform: translateY(-50%) translateX(-50%);
 				}
 			}
 		}
@@ -1277,6 +1383,8 @@ padding:0;
 			max-width: 465px;
 			display: inline-block;
 			vertical-align: top;
+					//height: 16.24%;
+					max-height: 70px;
 		}
 	}
 
@@ -1338,6 +1446,7 @@ padding:0;
 			margin-bottom: 10px;
 			font-size: 18px;
 			font-family: $type-header;
+			font-weight: 600;
 
 			@include breakpoint(desktop) {
 				width: auto;
@@ -1422,7 +1531,7 @@ padding:0;
 		text-decoration: none;
 
 		@include breakpoint(desktop) {
-			margin: 0 0 0 15px;
+			margin: 0 0 0 10px;
 		}
 
 		&:hover {
@@ -1469,6 +1578,7 @@ padding:0;
     -webkit-tap-highlight-color: transparent;
     max-width: 900px;
     margin: 0 auto;
+    width: 100%;
 
 }
 .slick-list {
@@ -1517,24 +1627,52 @@ padding:0;
     }
 }
 .slick-slide {
-    float: left;
-    height: 100%;
-    min-height: 1px;
-/*    -webkit-box-shadow: inset 0px 0px 20px 0px rgba(0,0,0,0.15);
--moz-box-shadow: inset 0px 0px 20px 0px rgba(0,0,0,0.15);
-box-shadow: inset 0px 0px 20px 0px rgba(0,0,0,0.15);
-padding: 30px;*/
-background-color: rgba($color-white, .025);
-border: 1px solid rgba($color-white, .05);
-padding: 30px;
+	float: left;
+	height: 100%;
+	min-height: 1px;
+	background-color: rgba($color-white, .025);
+	border: 1px solid rgba($color-white, .05);
+	padding: 30px;
 
-		@include breakpoint(landscape) {
-			padding: 45px;
-		}
+	h1, h2, h3, h4 {
+		color: $color-white;
+	}
 
-				@include breakpoint(desktop) {
-			padding: 55px;
+	h2 {
+		color: 20px;
+		color: $orange;
+	}
+
+	a {
+		color: $color-white;
+		font-weight: bold;
+		display: inline-block;
+		text-decoration: none;
+	}
+	p {
+		margin-bottom: 30px;
+	}
+
+	.button {
+		color: $color-white;
+		border-color: $color-white;
+		margin: 15px;
+		max-width: 200px;
+
+		&:hover {
+			color: $charcoal;
+			background: $color-white;
 		}
+	}
+
+	@include breakpoint(landscape) {
+		padding: 45px;
+	}
+
+	@include breakpoint(desktop) {
+		padding: 55px;
+	}
+
     [dir="rtl"] & {
         float: right;
     }
@@ -1575,6 +1713,8 @@ padding: 30px;
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
 	cursor: pointer;
 	transition: .3s all;
 
@@ -1674,6 +1814,137 @@ padding: 30px;
 			font-size: 47px;
 		}
 	}
+}
+
+.wpcf7 input, 
+.wpcf7 textarea{ 
+	width: 90%;
+	padding:15px;
+	color: $charcoal;
+	font-size:16px;
+	line-height: 20px;
+	border: solid 2px #DDD; 
+	box-shadow: 0;
+	border-radius: 3px;
+	-webkit-transition: all 0.2s ease;
+	-moz-transition: all 0.2s ease;
+	-o-transition: all 0.2s ease;
+	transition: all 0.2s ease; 
+	margin-top: 5px;
+}
+
+.wpcf7 .wpcf7-list-item{
+  padding-left: 0;
+  margin-left: 0;
+  margin-right: 25px;
+}
+
+.wpcf7 .wpcf7-list-item input{
+  border: none;
+  padding-left: 0;
+  margin-left: 0;
+}
+
+.wpcf7 select{
+  outline: none;
+  font-size:16px;
+}
+
+.wpcf7 input:hover, 
+.wpcf7 input:focus, 
+.wpcf7 input:active, 
+.wpcf7 textarea:hover, 
+.wpcf7 textarea:focus, 
+.wpcf7 textarea:active {
+  outline: none;
+}
+
+.wpcf7 input.wpcf7-submit{
+	border: 2px solid $orange;
+	border-radius: 4px;
+	font-size: 18px;
+	font-family: $type-header;
+	color: $orange;
+	text-transform: uppercase;
+	line-height: 24px;
+	padding: 18px 20px;
+	display: inline-block;
+	width: auto;
+	text-align: center;
+	text-decoration: none;
+	transition: .3s all;
+	font-weight: 500;
+	letter-spacing: 1px;
+	background: $color-white;
+	cursor: pointer;
+
+	&:hover {
+		background: $orange;
+		color: $color-white;
+		opacity: 1;
+	}
+}
+
+/* CF7 Messages */
+.wpcf7 .wpcf7-validation-errors{
+	border:none;
+	background-color: $color-white;
+	margin:0;
+	padding:20px;
+	color: $orange;
+}
+
+.wpcf7 .wpcf7-mail-sent-ok{
+	border:none;
+	background-color: $color-white;
+	margin:0;
+	padding:20px;
+	color: $orange;
+}
+
+.wpcf7 .wpcf7-mail-sent-ng{
+	border:none;
+	background-color: $color-white;
+	margin:0;
+	padding:20px;
+	color: $orange;
+}
+
+.wpcf7 span.wpcf7-not-valid-tip{
+    border:none;
+    background-color: $color-white;
+    padding:10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius:10px;
+    width: 180px;
+    color: $orange;
+    
+    /* Drop shadow */
+    -webkit-box-shadow: 3px 3px 3px rgba(0,0,0,0.3);
+    -moz-box-shadow: 3px 3px 3px rgba(0,0,0,0.3);
+    box-shadow: 3px 3px 3px rgba(0,0,0,0.3);
+}
+
+.wpcf7-form .fleft{
+  float: left;
+}
+
+.wpcf7-form .mright20{
+  margin-right: 20px;
+}
+
+.wpcf7-form .mright40{
+  margin-right: 40px;
+}
+
+.wpcf7-form .clear{
+  clear: both;
+}
+
+.catsone-job-listings-job {
+	padding: 10px 0;
+	border-bottom: 1px solid #DDD;
 }
 
 
