--- a/style.css
+++ b/style.css
@@ -974,8 +974,8 @@ h3 {
   @media (min-width: 1024px) {
     .home .quadrant.mental-health .quadrant-inner {
       position: absolute;
-      top: 40%;
-      left: 50%;
+      top: 45%;
+      left: 55%;
       transform: translateY(-50%) translateX(-50%);
       -ms-transform: translateY(-50%) translateX(-50%);
       -webkit-transform: translateY(-50%) translateX(-50%); } }
@@ -1530,3 +1530,23 @@ h3 {
 .catsone-job-listings-job {
   padding: 10px 0;
   border-bottom: 1px solid #DDD; }
+
+.alignleft {
+  width: 100%;
+  height: auto;
+  margin: 0 0 20px 0; }
+  @media (min-width: 600px) {
+    .alignleft {
+      float: left;
+      width: 175px;
+      margin: 0 20px 20px 0; } }
+
+.alignright {
+  width: 100%;
+  height: auto;
+  margin: 0 0 20px 0; }
+  @media (min-width: 600px) {
+    .alignright {
+      float: right;
+      width: 175px;
+      margin: 0 0px 20px 20px; } }
